--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2926"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation(num):\n",
-    "    # This function returns 1+2+3+....+num\n",
-    "    \n",
-    "    # Your code here:"
+    "        #return sum(i for i in range(num+1))\n",
+    "    sum = 0\n",
+    "    for i in range(num+1):\n",
+    "        sum = sum + i\n",
+    "    return(sum)\n",
+    "\n",
+    "summation(num)"
    ]
   },
   {
@@ -52,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +76,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation2(*args):\n",
-    "    # This function returns the sum of *args\n",
+    "    return sum(i for i in args)\n",
+    "    # Your code here:\n",
     "    \n",
-    "    # Your code here:"
+    "summation2(*array)\n",
+    "    "
    ]
   },
   {
@@ -80,14 +108,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "array=[3, 8, 16]\n",
     "def summation3(a, b, c):\n",
-    "    # This function returns a+b+c\n",
-    "    \n",
-    "    # Your code here:"
+    "\n",
+    "    l=[a,b,c]\n",
+    "    return sum(i for i in l)\n",
+    "\n",
+    "\n",
+    "summation3(*array)"
    ]
   },
   {
@@ -99,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,14 +151,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation4(**kwargs):\n",
-    "    # This function returns the sum of all M&Ms, except the red ones\n",
-    "    \n",
-    "    # Your code here:"
+    "    return sum(i for i in kwargs.values())- kwargs['red']\n",
+    "\n",
+    "summation4(**dictionary)"
    ]
   },
   {
@@ -127,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def summation5(.....):\n",
+    "def summation5(*args,**kwargs)\n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
     "    # Your code here:"
