--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
     "def summation(num):\n",
     "    # This function returns 1+2+3+....+num\n",
-    "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "      return sum(i for i in range(1, num+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2926\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(summation(num))"
    ]
   },
   {
@@ -51,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +77,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
     "def summation2(*args):\n",
     "    # This function returns the sum of *args\n",
-    "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    return sum (i for i in args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(summation2(*array))"
    ]
   },
   {
@@ -79,14 +113,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
     "def summation3(a, b, c):\n",
     "    # This function returns a+b+c\n",
-    "    sfsfsf\n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    n=[a,b,c]\n",
+    "    return sum([*n])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(summation3(*array))"
    ]
   },
   {
@@ -98,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,14 +159,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
     "def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    return sum(kwargs.values())-kwargs[\"red\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(summation4(**dictionary))"
    ]
   },
   {
@@ -126,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +209,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def summation5(.....):\n",
-    "    # This function returns the sum of a,b,c,d and e\n",
-    "    # You need to define the function input\n",
-    "    # Your code here:"
+    "def summation5(*args, **kwargs):\n",
+    "    # Your code here:\n",
+    "    return sum(kwargs.values()) + sum(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "769\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(summation5(a,b,c,*d,**e))"
    ]
   },
   {
@@ -160,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +315,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-292-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m: "
      ]
     }
@@ -242,9 +328,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 293,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# We can also iterate through an iterator using a for loop like this:\n",
     "# Note: we cannot go back directly in an iterator once we have traversed through the elements. \n",
@@ -265,9 +361,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 295,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-295-50d9eefb671b>, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-295-50d9eefb671b>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def divisible2(iterator):\n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
@@ -278,7 +383,33 @@
     "    # Sample Output: 2\n",
     "    \n",
     "    # Your code here:\n",
+    "    \n",
+    "    for i in interator:\n",
+    "        if i\n",
+    "    \n",
+    "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'divisible2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-296-d86149fe9513>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdivisible2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'divisible2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(divisible2(iterator))"
    ]
   },
   {
